--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ file_name: <input type="text" id=filename name="filename" value="xxx.hex">
   <option value="stm32l0">stm32l0</option>
   <option value="stm32l4x">stm32l4x</option>
   <option value="stm32h7x">stm32h7x</option>
+  <option value="avr">avr</option>
 </select>
 <p>
 
@@ -135,9 +136,9 @@ model: <input type="text" name="model" value="stm32f103c8t6">
 <form name="form_interface">
 <label>interface: </label>
 <select name="select_interface">
-  <option value="hex">swd</option>
-  <option value="bin">jtag</option>
-  <option value="bin">icsp</option>
+  <option value="swd">swd</option>
+  <option value="jtag">jtag</option>
+  <option value="icsp">icsp</option>
 </select>
 <p>
 
